# tasks_backend

./: .gitignore  Cargo.toml
migrations/: 20250929201500_create_tasks_table.sql  20250929201512_create_users_table.sql  20251002120112_create_users_table.sql  20251002120231_create_tasks_table.sql
src/: main.rs
src/common/: api.rs  errors.rs  jwt.rs  mod.rs  utils.rs
src/config/: mod.rs
src/database/: connection.rs
src/handlers/: auth.rs  tasks.rs
src/middleware/: mod.rs
src/models/: task.rs  user.rs
src/services/: task.rs  user.rs
