[package]

name = "tasks_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.5"
chrono = {version = "0.4.42", features = ["serde"]}
dotenvy = "0.15.7"
jsonwebtoken = {version = "10.0.0", features = ["aws_lc_rs"]}
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "tls-native-tls", "tls-rustls-ring-webpki", "chrono", "uuid", "ipnetwork"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = "1.18.1"
